@@ -1,6 +1,7 @@
 [B]0.9.12[/B]
 Fix for scrollbars in Leia
 Update watched indicators
+Rearrange skin settings
 
 [B]0.9.11[/B]
 Add support for AEL metadata
